correction de la navbar sur contact.html+form+contraste

--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -3030,7 +3030,7 @@
     margin: -1px;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
-    border: 0
+    border: 0;
 }
 
 .sr-only-focusable:active,
